--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -21,18 +21,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>When your life is at an all time low, it's time to get out and explore with Dry Oar. Where not a single oar is actually dry</p>
+    <p>When your life is at an all time low, it's time to get out and explore with Club Rafting, where you won't find a single dry oar.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>If </p>
+    <p>No matter how old you are, where you're at in life, or your financial situation, Dry Oar is the place to experience the best in life at the cheapest price you'll find in Idaho! </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/resources/images/logos/logo16_200.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -63,11 +63,13 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
-      <!-- change this -->
+      Heading Font: [EDU Australi VI WA NT Hand Guides]
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap" rel="stylesheet">
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [Helvetica]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
