--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <a href="#">Personal Siteplan</a>
 </nav>
 <h1>Hi! I am Reily Hymas</h1> 
-<img> 
+<img src="IMG_4603 (3).jpeg" alt="photo of girl in pink dress on sand" />
+
 
 
 
