--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,34 +1,67 @@
-!DOCTYPE html>
-<html lang="en"
-<head
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width, initial-scale=1
-    <title> Document</title>
-</head>
-<body>
-    <header>
-        <img scr="" alt="https://picsum.photos/seed/picsum/200/300" alt="logo">
-        <nav>
-        </header>
-    <div id="scroller"
-    <img scr="https://picsum.photos/400" alt="logo">
-    <div id="product_gallery">
-        <img scr="https://picsum.photos/seed/picsum/200/300"
-    </div>
 
-
-
-
-</html
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<html lang="en"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" scr="images/logo.png" alt="Club Rafting Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#"> Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+        </nav>
+        </header>
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" scr="images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home title">Have An Adventure</h1>
+            <h4>Make Memories with Club Rafting</h4>
+            <div class='button box'>
+                <a class='book' href="contactus.html">Book Now</a>
+            </div>
+        </section>
+  </div>
+ <main class="home-grid"> 
+    <section class="rivers-card">
+        <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+        <img class="icon" src="images/river_icon.png" alt="river icon">
+        <h2>Rivers</h2>
+      </section>
+      <section class="rapids-card">
+        <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+        <img class="icon" src="images/oars.png" alt="oars icon">
+        <h2>Rapids</h2>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+      </section>
+      <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
+      <section class="msg">
+        <h2>More Than Just the Thrill</h2>
+        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+        <a class="join" href="rivers.html"> Join Us</a>
+      </section>
+</main>
+<footer>
+    <p> Dry Oar &copy; 20xx - Reily Hymas</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
 </body>
 </html>
+<head>
