--- a/home page/index.html
+++ b/home page/index.html
@@ -7,7 +7,7 @@
     <a href="#">Personal Siteplan</a>
 </nav>
 <h1>Hi! I am Reily Hymas</h1> 
-<img src="IMG_4603 (3).jpeg" alt="photo of girl in pink dress on sand" />
+<img src="seniorpic.png" alt="photo of girl in pink dress on sand" />
 
 
 
