--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -57,10 +57,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font:   <!-- change this -->
+        Heading Font: Montserrat   <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Roboto Mono <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -95,7 +95,7 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Page 2] <!-- change this -->
         </div>
         <div class="sm-page3">
           [Page3]  <!-- change this -->
