--- a/halloween/halloween.html
+++ b/halloween/halloween.html
@@ -24,7 +24,7 @@
 <h2>Pumpkins</h2>
 <p>Zombie ipsum reversus ab viral inferno, nam rick grimes
 malum cerebro. De carne lumbering animata corpora quaeritis.
-Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
+Summus brains sit​, morbo vel maleficia? De apocalypsi gorger
 omero undead survivor dictum mauris. </p>
 </section>
 <section>
