--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,7 +13,7 @@
         
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" scr="images/logo.png" alt="Club Rafting Logo">
+                <img class="logo" src="images/logo.png" alt="Club Rafting Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
