--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/plan.css">
   </head>
 
   <body>
@@ -12,6 +12,9 @@
       <h1>Jojo's Foodies Site Plan</h1>
       <h2>Reily Hymas</h2>
       <h2>WDD 130</h2>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -24,7 +27,7 @@
 
 
       <h3>Audience</h3>
-      <p>Whether you're a pro baker or someone just starting to learn, these recipes are for you!</p>  <!-- change this -->
+      <p>Whether you're a pro baker or someone just starting to learn, these recipes are for you!</p>  
 
       <hr>
       <h2>Branding</h2>
