--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -63,7 +63,7 @@
         Heading Font: Montserrat   <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Roboto Mono <!-- change this -->
+        Paragraph Font: Dancing Script <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
