--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -97,10 +97,10 @@
         <div class="sm-home">
           Home
         </div>
-        <div class="sm-page2">
+        <div class="4 ingredient peanut butter cookies">
           [Page 2] <!-- change this -->
         </div>
-        <div class="sm-page3">
+        <div class="Chocolate Chip cookies">
           [Page3]  <!-- change this -->
         </div>
 
@@ -123,29 +123,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Baking At It's Best!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="baking1.jpg" alt="image for homepage">
+        <img src="baking2.avif" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+       Delicious 4-ingredient Peanut Butter Cookies
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="peanut butter 1.avif" alt="picture of peanut butter cookies">
+        <img src="peanut butter 2.avif" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
-      </p>
+      The BEST chocolate chip cookie recipe    
+      </p> 
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="choco 1.avif" alt="image for page3">
+        <img src="choco 2.avif" alt="image for page3">
 
       </ul>
       <hr>
@@ -159,19 +159,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="homepagepersonal.avif" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="page1.avif" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="page2wireframe.avif" alt="page 3 wireframe">
     </main>
   </body>
 
