--- a/halloween/halloween.html
+++ b/halloween/halloween.html
@@ -4,7 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
+<style> 
+body {
+    background-color: orange;
+}
+
+
+</style>
 </head>
+
 <body>
 <div id="wrapper">
 <header>
