--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -119,6 +119,12 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
