--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -172,6 +172,12 @@
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
       <img src="page2wireframe.avif" alt="page 3 wireframe">
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
     </main>
   </body>
 
