--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -174,7 +174,7 @@
       <img src="page2wireframe.avif" alt="page 3 wireframe">
       <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="#Rafting">Rafting</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
       </div>
