completed site plan

--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -95,13 +95,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Home Page 
         </div>
         <div class="4 ingredient peanut butter cookies">
-          [Page 2] <!-- change this -->
+          4 Ingredient Peanut Butter Cookies <!-- change this -->
         </div>
         <div class="Chocolate Chip cookies">
-          [Page3]  <!-- change this -->
+          the BEST chocolate chip cookies   <!-- change this -->
         </div>
 
         <div class="top">
@@ -153,23 +153,23 @@
         Wireframes
       </h2>
       <p>
-        Create three wireframes for your site. One for each page and list them here</p>
+        Home Page, Peanut Butter Cookies, and Chocolate Chip Cookies</p>
 
-      <h3>Home</h3>
+      <h3>Home Page</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Why Jojos Foodies? If you love baking but also keeping it simple, this website is for you! Here you will find the easiest and yummiest recipes made just for your kitchen!
       </p>
       <img src="homepagepersonal.avif" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Peanut Butter Cookies</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Peanut Butter Cookies have never tasted so good in the shortest amount of time! This 4 ingredient recipe takes 30 minutes or less and is gluten free!
       </p>
       <img src="page1.avif" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Chocolate Chip Cookies </h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+      This chocolate chip cookie is very easy but takes slightly longer. Inspired by a popular Disneyland recipe you'll love!
       </p>
       <img src="page2wireframe.avif" alt="page 3 wireframe">
       <div class="topnav">
