--- a/bakingwebsite/subpage1.html
+++ b/bakingwebsite/subpage1.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page Wireframe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <style>
         /* Basic styling for wireframe */
         body {
-            font-family: Arial, sans-serif;
+            font-family: Merriweather;
             margin: 0;
             padding: 0;
         }
         header, footer {
-            background-color: #5246bb;
+            background-color: #a29dee;
             color: white;
             text-align: center;
             padding: 1em;
@@ -21,7 +24,7 @@
             margin: 1em;
         }
         nav a {
-            color: white;
+            color:rgb(246, 244, 247);
             margin: 0 1em;
             text-decoration: none;
         }
@@ -35,7 +38,7 @@
             margin-bottom: 2em;
         }
         .sidebar {
-            background-color: #f4f4f4;
+            background-color: #a8a1ec;
             padding: 1em;
             margin-top: 1em;
         }
@@ -44,34 +47,46 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>My Personal Website</h1>
+        <img src="jojosfoodieslogo.png">
+        <h1>Jojos Foodies</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="site.plan.html">Site Plan</a>
+            <a href="homepagewireframe.html">Home Page</a>
+            <a href="subpage2.html">Chocolate Chip Cookies</a>
         </nav>
     </header>
 
     <!-- Main Content Section -->
     <div class="container">
         <div class="main-content">
-            <h2>About Me</h2>
-            <p>This is where you'll introduce yourself in more detail and talk about your interests, background, or purpose for the site.</p>
+            <img src="peanut butter 1.avif">
+            <h2>4-Ingredient Peanut Butter Cookies</h2>
+            <p> Peanut Butter Cookies have never tasted so good in the shortest amount of time! This 4 ingredient recipe takes 30 minutes or less and is gluten free!</p>
         </div>
-
+<img src="peanut butter 2.avif">
+<p>Ingredients- </p>
+   <p> • 1 cup of Peanut Butter</p>
+    <p>• 1 cup of Butter</p>
+   <p> • 1 Egg</p>
+   <p> • 1 teaspoon of Vanilla Extract </p>
+    
+   <p> Recipe-</p>
+   <p> Preheat the oven to 350 degrees Fahrenheit. Combine all ingredients together in a mixing bowl.
+    Then scoop dough in to balls and place on a baking pan with parchment paper. With a fork press down lightly onto the cookies. Then bake for 10 minutes, let cool, and enjoy</p>
         <!-- Sidebar Section -->
         <div class="sidebar">
+            <p> </p>
             <h3>More Links</h3>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="homepagewireframe.html">Home Page</a></li>
+                <li><a href="subpage2.html">More Recipes!</a></li>
             </ul>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 My Personal Website</p>
+        <p>&copy; 2024 Jojos Foodies</p>
     </footer>
 </body>
 </html>
