--- a/bakingwebsite/subpage2.html
+++ b/bakingwebsite/subpage2.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page Wireframe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <style>
         /* Basic styling for wireframe */
         body {
-            font-family: Arial, sans-serif;
+            font-family: Merriweather;
             margin: 0;
             padding: 0;
         }
         header, footer {
-            background-color: #333;
+            background-color: #b4a6e5;
             color: white;
             text-align: center;
             padding: 1em;
@@ -21,7 +24,7 @@
             margin: 1em;
         }
         nav a {
-            color: white;
+            color: rgb(236, 196, 255);
             margin: 0 1em;
             text-decoration: none;
         }
@@ -35,7 +38,7 @@
             margin-bottom: 2em;
         }
         .sidebar {
-            background-color: #f4f4f4;
+            background-color: #a4abe4;
             padding: 1em;
             margin-top: 1em;
         }
@@ -44,20 +47,37 @@
 <body>
     <!-- Header -->
     <header>
+        <img src="jojosfoodieslogo.png">
         <h1>Jojos Foodies</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="homepagewireframe.html">Home</a>
+            <a href="subpage1.html">More Recipes!</a>
+            <a href="site.plan.html">Site Plan</a>
         </nav>
     </header>
 
     <!-- Main Content Section -->
     <div class="container">
         <div class="main-content">
-            <h2>About Me</h2>
-            <p>This is where you'll introduce yourself in more detail and talk about your interests, background, or purpose for the site.</p>
+            <img src="choco 1.avif">
+            <h2>The Best Chocolate Chip Cookies</h2>
+            <p>This chocolate chip cookie is very easy but takes slightly longer. Inspired by a popular Disneyland recipe you'll love!</p>
         </div>
+        <img src="choco 2.avif">
+        <p>Ingredients-</p>
+        <p>-1 cup butter</p>
+        <p>-1 1/4 cup brown sugar</p>
+        <p>-1 Egg</p>
+        <p>-1/4 cup granulated sugar</p>
+        <p>-1 egg yolk</p>
+        <p>-1 tsp sea salt</p>
+        <p>-1 tsp vanilla extract</p>
+        <p>-1 tsp baking soda</p>
+        <p>-2 1/4 cups flour</p>
+        <p>-1 cup chocolate chips</p>
+
+        <p> Recipe-</p>
+        <p>Brown butter in pan and let it cool until it begins to solidify. Cream butter, sugars, and salt in a mixing bowl until light and fluffy. Mix in whole egg, egg yolk, and vanilla. Combine your dry ingredients and mix them with the batter. Add chocolate chips. Place dough in freezer for 3o minutes. Bake at 350 for 7-10 minutes or until your cookies are a nice golden brown on the edges but still soft in the center. Enjoy!</p>
 
         <!-- Sidebar Section -->
         <div class="sidebar">
