--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <nav>
     <a href="wwr/index.html">White Rafting Website</a>
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-    <a href="#">Personal Website</a>
-    <a href="#">Personal Siteplan</a>
+    <a href="bakingwebsite/homepagewireframe.html">Personal Website</a>
+    <a href="bakingwebsite/site.plan.html">Personal Siteplan</a>
 </nav>
 <h1>Hi! I am Reily Hymas</h1> 
 <img src="seniorpic.png" alt="photo of girl in pink dress on sand" />
