--- a/bakingwebsite/subpage2.html
+++ b/bakingwebsite/subpage2.html
@@ -51,7 +51,7 @@
         <h1>Jojos Foodies</h1>
         <nav>
             <a href="homepagewireframe.html">Home</a>
-            <a href="subpage1.html">More Recipes!</a>
+            <a href="subpage1.html">Chocolate Chip Cookies</a>
             <a href="site.plan.html">Site Plan</a>
         </nav>
     </header>
@@ -83,15 +83,15 @@
         <div class="sidebar">
             <h3>More Links</h3>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="subpage1.html">More Recipes!</a></li>
+                <li><a href="homepagewireframe.html">Home Page</a></li>
             </ul>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 My Personal Website</p>
+        <p>&copy; 2024 Jojos Foodies</p>
     </footer>
 </body>
 </html>
