--- a/bakingwebsite/subpage2.html
+++ b/bakingwebsite/subpage2.html
@@ -51,7 +51,7 @@
         <h1>Jojos Foodies</h1>
         <nav>
             <a href="homepagewireframe.html">Home</a>
-            <a href="subpage1.html">Chocolate Chip Cookies</a>
+            <a href="subpage1.html"> Peanut Butter Cookies</a>
             <a href="site.plan.html">Site Plan</a>
         </nav>
     </header>
