--- a/bakingwebsite/site.plan.html
+++ b/bakingwebsite/site.plan.html
@@ -85,9 +85,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="homepagewireframe.html">Home</a>
+        <a href="subpage1.html">Page2</a>
+        <a href="subpage2.html">Page3</a>
       </nav>
       <hr>
       <h2>
@@ -97,10 +97,10 @@
         <div class="sm-home">
           Home Page 
         </div>
-        <div class="4 ingredient peanut butter cookies">
+        <div class="subpage1.html">
           4 Ingredient Peanut Butter Cookies <!-- change this -->
         </div>
-        <div class="Chocolate Chip cookies">
+        <div class="subpage2.html">
           the BEST chocolate chip cookies   <!-- change this -->
         </div>
 
@@ -173,10 +173,10 @@
       </p>
       <img src="page2wireframe.avif" alt="page 3 wireframe">
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#Rafting">Rafting</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="homepagewireframe.html">Home</a>
+        <a href="subpage1.html">Page 1</a>
+        <a href="subpage2.html">Page 2</a>
+       
       </div>
     </main>
   </body>
