--- a/bakingwebsite/subpage2.html
+++ b/bakingwebsite/subpage2.html
@@ -41,6 +41,10 @@
             background-color: #a4abe4;
             padding: 1em;
             margin-top: 1em;
+        
+        }
+        image {
+            align-content: center;
         }
     </style>
 </head>
@@ -59,7 +63,7 @@
     <!-- Main Content Section -->
     <div class="container">
         <div class="main-content">
-            <img src="choco 1.avif">
+            <img src="choco 1.avif"> 
             <h2>The Best Chocolate Chip Cookies</h2>
             <p>This chocolate chip cookie is very easy but takes slightly longer. Inspired by a popular Disneyland recipe you'll love!</p>
         </div>
