--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="index.css"/>
     </head>
     <body>
         <div id="content">
@@ -20,7 +21,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#"> Page 2</a>
+                <a href="subpage1.html"> FAQ</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
         </nav>
